--- a/report/main.tex
+++ b/report/main.tex
@@ -26,13 +26,13 @@
 \definecolor{codeblue}{rgb}{0.2,0.4,1}
 \lstdefinestyle{mystyle}{
     language=C,
-    morekeywords={diff_op_t},
+    morekeywords={diff_entry_t, uint16_t},
     backgroundcolor=\color{backcolour}, 
     commentstyle=\color{codegray},
     keywordstyle=\color{codepurple},
     stringstyle=\color{codegreen},
     % identifierstyle=\color{codeblue},
-    basicstyle=\ttfamily\footnotesize,
+    basicstyle=\fontfamily{pcr}\ttfamily\footnotesize,
     breakatwhitespace=false,
     breaklines=true,
     captionpos=b,
@@ -79,12 +79,12 @@
 
 \input{sections/titlepage}
 
+
+% Todo-list
+% \listoftodos
 \setcounter{page}{2}
 \tableofcontents
 \newpage
-
-% Todo-list
-\listoftodos
 % Start of the report
 \begin{abstract}
 % Summarize introduction, method, results, and conclusion
