--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,6 +1,6 @@
-Traditionally, software updates in embedded systems have been conducted by taking the system offline for a brief period. While this approach is feasible for many applications, there exists a subset of embedded systems where downtime is not an option due to the critical nature of their operations. These systems operate in environments where interruptions can result in severe consequences, including compromised safety, financial losses, or disruptions to essential services. Examples of these systems include aerial drones and other mobile robots, automotive systems, power generation facilities and smart grids. An alternative to the traditional approach is DSU (Dynamic Software Updates), where the system is updated while it is running. DSU allows for the system to continue operating during the update process, ensuring that the system remains available and operational by eliminating overhead time in terms of boot and initialization of the software. DSU does not however come without its challenges, as the update process must be performed in a manner that does not compromise the system's integrity, safety, or real-time deadlines.
+Traditionally, software updates in embedded systems have been conducted by taking the system offline for a brief period. While this approach is feasible for many applications, there exists a subset of embedded systems where downtime is not an option due to the critical nature of their operations. These systems operate in environments where interruptions can result in severe consequences, including compromised safety, financial losses, or disruptions to essential services. Examples of these systems include aerial drones and other mobile robots, automotive systems, power generation facilities and smart grids. An alternative to the traditional approach is DSU (Dynamic Software Updates), where the system is updated while it is running. DSU allows for the system to continue operating during the update process, ensuring it remains available and operational by eliminating overhead time in terms of boot and initialization of the software. DSU does not however come without its challenges, as the update process must be performed in a manner that does not compromise the system's integrity, safety, or real-time deadlines.
 
-While the concept of dynamic software updates is not new, there have been little research on utilising DSU in embedded systems with real-time requirements. With the wide variety of microcontroller architectures and operating systems present, the challenges of implementing DSU in embedded systems are many. But this diversity also presents opportunities for developing new methods and techniques for performing DSU. One such opportunity which this project aims to investigate is the use of Ferroelectric Random-access Memory (FRAM). FRAM is a non-volatile memory technology that has the potential to outperform traditional storage such as EEPROM and Flash in such scenarios, and is further described in section \ref{sec:fram}.
+While the concept of dynamic software updates is not new, there have been little research on utilising DSU in embedded systems with real-time requirements. With the wide variety of microcontroller architectures and operating systems available, the challenges of implementing DSU in embedded systems are many. But this diversity also presents opportunities for developing new methods and techniques for performing DSU. One such opportunity which this project aims to investigate is the use of Ferroelectric Random-access Memory (FRAM). FRAM is a non-volatile memory technology that has the potential to outperform traditional storage such as EEPROM and Flash in such scenarios, and is further described in section \ref{sec:fram}.
 
 Previous work in the field have utilized different methods of performing the updates, such as Holmbacka et al. \cite{dynUpdateFramework} who provide a framework to perform updates by dynamically relinking FreeRTOS tasks. This approach was shown to add overhead in the magnitude of 10s of milliseconds. On the other hand, Yaacoub et al. \cite{NeRTA} present a method to schedule the dynamic updates in a manner such that real-time deadlines can be met by analysing and predicting idle processor time. They recorded a maximum idle time of just under 3ms when measuring on a low level flight controller, Hackflight \cite{hackflight}. This shows that some use cases may present overhead restrictions far lower than those measured by Holmbacka et al. and the necessity to investigate other methods for performing the update. This thesis project is inspired by the work of Yaacoub et al. and aims to investigate methods for dynamic software updates, targeting these tighter real-time deadlines. The research presents a method for performing dynamic software updates in embedded systems with real-time requirements, and evaluates the performance of the update process when utilising FRAM as the storage medium. The research is conducted on a Texas Instruments MSP430FR5994 microcontroller.
 
@@ -13,6 +13,5 @@ Secondly; to meet these deadlines, the utilisation of FRAM is proposed as a pote
 
 \section{Requirements}
 As a way of containing the scope of the project, and to provide a clear goal for the research, the requirements of the work need to be clearly defined. There are a multitude of requirements to consider in the context of DSU, both functional and non-functional. Mlinarić describes in \cite{dsuChallenges} five key requirements for any DSU implementation, namely: \textit{Availability}, \textit{Correctness}, \textit{Flexibility}, \textit{Performance}, and \textit{Simplicity}. In addition to these general requirements for DSU, there are also requirements that are specific to the context of embedded systems, which may be considered subcategories of the above; \textit{Energy efficiency}, \textit{Memory usage}, and \textit{Security}.
-\todo{Maybe expand on these}
 
-The main focus of this research is the performance of the update process, however other aspects such as security and correctness are considered when evaluating the results, as they are factors which may impact the performance, and thus, the feasibility of the solution.
+The main focus of this research is the performance of the update process, thus the requirements for this project are as follows; The system must remain available and operational during the update process, and, the update process must be able to meet real-time deadlines. Additional considerations are made such as the memory utilisation and correctness of the update process, but these are secondary to the main focus of the research.
