Fix final draft from feedback

--- a/report/sections/experiments.tex
+++ b/report/sections/experiments.tex
@@ -40,7 +40,7 @@ Figure \ref{fig:wApply8} shows the \textit{application} of the previously discus
         \label{fig:wApply8}
     \end{shaded}
 \end{figure}
-Here, a view of the improvement over traditional storage mediums can be seen. Using numbers from the data sheet for similar platforms from Texas Instruments, which use Flash \cite{msp430Flash}, the maximum speed for pre-erasing 512 bytes of data on Flash is 23ms, or an estimated 11.5ms for 256 bytes. This is well beyond the real-time deadlines which researchers such as Yaacoub et al. have shown to be realistic \cite{NeRTA}, and does not include the time it takes to write the data. In comparison, the DSU process using FRAM can write this data in just 0.44ms, as estimated from the data in figure \ref{fig:wApply8}.
+Here, a view of the improvement over traditional storage mediums can be seen. Using numbers from the data sheet for similar platforms from Texas Instruments, which use Flash \cite{msp430Flash}, the maximum speed for pre-erasing 512 bytes of data on Flash is 23ms, or an estimated 11.5ms for 256 bytes. This is well beyond the real-time deadlines which researchers such as Yaacoub et al. have shown to be realistic \cite{NeRTA}, and does not include the time it takes to write the data. In comparison, the DSU process using FRAM can write this data in just 0.44ms, as estimated from the data in figure \ref{fig:wApply8}, nearly two order of magnitude faster.
 
 The \textbf{Shift} operation behaves identically when it comes to the apply phase, as seen in figure \ref{fig:sDecodeVsApply}. The growth of 12 cycles for each additional edited word, with a fixed decode cost, means the \textbf{Shift} operation allows updates which shift large portions of the code without significant performance costs. Using the linear equation from the figure, $f(x)=12x+134$, an approximate 1988 words, or 3976 bytes could be written or shifted within 3ms. 
 \begin{figure}[!ht]
@@ -80,9 +80,9 @@ The results of the simulated updates show that the DSU process benefits greatly 
 In figure \ref{fig:s8vs16}, the real-time performance of the update process is shown. The real-time performance is calculated by multiplying the number of cycles required to perform the update with the clock cycle time. As can be seen, the real-time performance of the update process is significantly improved when running at 16MHz, with the update process being on average $38.6\%$ faster. This is a significant improvement, and shows that the DSU process is feasible in a real-time system, even with the added overhead of wait states. Furthermore, using a linear regression, an estimated maximum size of a write operation was calculated to 124 words at 16MHz while still meeting the 3ms deadline. At 8MHz, this number is instead 75 words. This includes the decode phase, which the majority of time is spent in. Thus, if future work improves upon the decode phase, perhaps with more sophisticated encoding, it would certainly be possible to increase this limit.
 
 \section{Proof of Concept Updates}
-Firstly, to demonstrate the feasibility of the DSU process, a simple update was constructed which changes a single word in the binary image and makes the LED of the launchpad blink at a different frequency. As expected from such a small update, the time it takes to perform the update is very short. The majority of time spent in the decoding phase, taking 1859 cycles, whereas the Apply phase only took 260. 
+Firstly, to demonstrate the feasibility of the DSU process, a simple update was constructed which changes a single word in the binary image and makes the LED of the MSP430FR5994 blink at a different frequency. As expected from such a small update, the time it takes to perform the update is very short. The majority of time spent in the decoding phase, taking 1859 cycles, whereas the Apply phase only took 260. 
 
-As a more interesting proof-of-concept, a larger update was constructed which changes the behaviour of the LED blinking and introduces new functionality to the application. The application pre-update simply blinks both LEDs on the launchpad at a fixed, synchronized frequency. The post-update application adds functionality to a button on the microcontroller. When pressed, the button changes the blinking frequency of one of the LEDs and makes them unsynchronized, thus providing a more complex update scenario which also has the benefit of being visibly verifiable. 
+As a more interesting proof-of-concept, a larger update was constructed which changes the behaviour of the LED blinking and introduces new functionality to the application. The application pre-update blinks both LEDs on the launchpad at a fixed, synchronized frequency. The post-update application adds functionality to a button on the microcontroller. When pressed, the button changes the blinking frequency of one of the LEDs and makes them unsynchronized, thus providing a more complex update scenario which also has the benefit of being visibly verifiable. 
 \begin{framed}
 \noindent\begin{minipage}{.45\textwidth}
 \begin{lstlisting}[
