--- a/report/sections/method.tex
+++ b/report/sections/method.tex
@@ -44,7 +44,9 @@ In such a scenario, the space for the error handling code has to be created by s
         \label{fig:shift_example}
     \end{shaded}
 \end{figure}
-After the \textbf{Shift} operation, additional instructions can safely be added to the newly made space with the \textbf{Write} operation. As the program counter increments and hits the updated region, the newly added and shifted instructions will be executed as intended. This is a more efficient way of describing the update as opposed to individual word-level changes, as there is no need to state already existing data. As one might expect, shifting a large portion of the binary image can be costly in terms of time, and the more code that is located posterior to the shifted region, the more costly the operation becomes. Methods to mitigate this cost are discussed in section \ref{sec:memory_layout}.
+After the \textbf{Shift} operation, additional instructions can safely be added to the newly made space with the \textbf{Write} operation. Note that the original range is left untouched by the \textbf{Shift} operation. The assumption is that the region will be used for new code and thus, will be overwritten imminently by another operation.
+
+This is a more efficient way of describing the update as opposed to individual word-level changes, as there is no need to state already existing data. As one might expect, shifting a large portion of the binary image can be costly in terms of time, and the more code that is located posterior to the shifted region, the more costly the operation becomes. Methods to mitigate this cost are discussed in section \ref{sec:memory_layout}.
 
 \textbf{\textit{Format.}} 
 The \textit{diff} file is a text file that describes the changes to be made to the binary image. In this research, two main types of operations are considered: \textbf{Write} and \textbf{Shift}. The \textbf{Write} operation describes a change to a specific address, or range of addresses in the binary image, while the \textbf{Shift} operation describes a change that causes a portion of the binary image to be shifted. The format of the \textit{diff} file differs between operations, and below are some examples of the format.
@@ -108,7 +110,7 @@ The MSP430FR5994 uses a unified memory model where FRAM, SRAM and registers can 
 \end{shaded}
 \end{figure}
 
-The figure has been simplified to highlight the important parts of discussion for this research. Essentially, the final section of the memory space is the main memory used in any application running on the device. This is where the binary image of the program is stored, and where the update process will take place. The memory space is automatically divided into two sections by the compiler and linker, FRAM (0x4000-0xFFFF) and HIFRAM (0x10000 - 0x43FFF). This is due to the fact that the 16-bit architecture of the microprocessor doesn't allow addressing beyond 16-bit memory addresses. Accessing the HIFRAM section is only possible with an extension of the instruction set, using less efficient, emulated instructions. How these sections are used is up to the developer and can be configured in the linker script. 
+The figure has been simplified to highlight the important parts of discussion for this research. Essentially, all memory from address 0x4000 and up is the main memory used in any application running on the device. This is where the binary image of the program is stored, and where the update process will take place. The memory space is automatically divided into two sections by the compiler and linker, FRAM (0x4000-0xFFFF) and HIFRAM (0x10000 - 0x43FFF). This is due to the fact that the 16-bit architecture of the microprocessor doesn't natively allow addressing beyond 16-bit memory addresses. Accessing the HIFRAM section is only possible with an extension of the instruction set, using less efficient, emulated instructions. How these sections are used is up to the developer and can be configured in the linker script. 
 
 To facilitate an efficient update process, the program should be structured in such a way that the added or removed code affects the rest of the program as little as possible. For example, moving a function in memory requires that all calls to said function are updated, which can be a time-consuming process. Additionally, adding new code within existing functions requires shifting everything directly below it, i.e. at higher addresses. Fortunately, the 2-section structure allows code within the FRAM section to be shifted without affecting the HIFRAM section, as there likely will be unused space between the two sections. However, in this research, the memory layout opted for is to have the DSU functionality in the FRAM section, with all other application code in the HIFRAM section. This way, the DSU code itself is never affected by the update process, which would almost certainly cause the update to fail. 
 
