--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -1,7 +1,7 @@
 Dynamic Software Updates (DSU) enable a system to be updated while it is running, ensuring that the system remains available and operational all the while providing increased security and correctness. However, the current literature on DSU in embedded systems with real-time requirements is limited, and it is a space where DSU may provide significant benefits. 
 
-This paper presents an implementation of Dynamic Software Updates targeting real-time systems, utilising Ferroelectric Random Access Memory (FRAM) as the main memory technology. FRAM promises to outperform traditional storage mediums such as Flash, and this research provides insight into the potential benefits and drawbacks of using FRAM for DSU in embedded systems. 
+We present an implementation of Dynamic Software Updates targeting real-time systems, utilising Ferroelectric Random Access Memory (FRAM) as the main memory technology. The implementation is based on binary differencing, where the update is described by operations to transform the old version into the new one. FRAM promises to outperform traditional storage mediums such as Flash, and this research provides insight into the potential benefits and drawbacks of using FRAM for DSU in embedded systems. 
 
-The experimental results along with proof-of-concept updates on a real application show that the proposed method can perform updates with minimal overhead, ensuring that real-time deadlines are met. The research also provides a comparison between the performance of FRAM and Flash, showing that FRAM can provide significant benefits in terms of update time and energy efficiency.
+The experimental results along with proof-of-concept updates on a real application show that the proposed method can perform updates with minimal overhead, ensuring that real-time deadlines are met. We also provide a comparison between the performance of FRAM and Flash, showing that FRAM can provide significant benefits in terms of update time, in some cases up to 2 orders of magnitude faster.
 
 \textbf{\textit{Keywords:}} Dynamic Software Updates, Real-time Systems, FRAM
